tests/error/void_declaration.c
// fail "Cannot declare a variable of type void."

void ident_0;


